# BrightChain-Cpp

./: .clang-format  .gitignore  .gitmodules  BIP44_IMPLEMENTATION_SUMMARY.md  BLOCK_TYPES_IMPLEMENTATION.md  BrightChain  CMakeLists.txt  COMPATIBILITY_STATUS.md  CONTRIBUTING.md  CROSS_PLATFORM_COMPATIBILITY.md  IMPLEMENTATION_COMPLETE.md  MEMBER_IMPLEMENTATION.md  PAILLIER_CROSS_PLATFORM_COMPLETE.md  PAILLIER_CROSS_PLATFORM_PLAN.md  PAILLIER_IMPLEMENTATION.md  PHASE4_COMPLETE.md  PHASE_A_PROGRESS.md  QUICKSTART.md  README.md  TODO.md  VOTING_KEY_CROSS_PLATFORM_STATUS.md  brightchain.sh  cbl_test_vectors.json  express-suite  generate_cbl_vectors.js  package-lock.json  package.json  secrets.js  test_array  test_array.cpp  test_blocksize  test_blocksize.cpp  test_shamir_debug.cpp  test_shamir_direct.cpp  test_vectors_cpp_member_json.json  test_vectors_cpp_voting.json  vcpkg.json
.github/instructions/: codacy.instructions.md
.github/workflows/: ci.yml
.kiro/specs/brightchain-macos-client/: design.md  requirements.md  tasks.md
docs/: BIP39_FIX.md  BRIGHTCHAIN_SH_VOTING_UPDATES.md  COMPLETE_FIX_SUMMARY.md  CROSS_PLATFORM_VERIFICATION_EXECUTION.md  FINAL_SUMMARY.md  GETTING_STARTED.md  JSON_CROSS_PLATFORM_COMPLETE.md  MEMBER_API.md  MEMBER_COMPARISON.md  MNEMONIC_VOTING_KEY_VERIFICATION.md  PAILLIER_QUICK_START.md  PHASE_C_COMPLETE.md  PHASE_D_COMPLETE.md  PHASE_D_ENHANCEMENTS_COMPLETE.md  PHASE_D_FINAL_SUMMARY.md  PHASE_D_STATUS.md  QUICK_REFERENCE.md  VERIFICATION_STATUS.md  VOTING_COMPLETE.md  VOTING_IMPLEMENTATION_SUMMARY.md  VOTING_KEY_VERIFICATION_FINDINGS.md  VOTING_TRANSLATION_COMPLETE.md
examples/: CMakeLists.txt  block_storage_example.cpp  block_types_example.cpp  ecies_example.cpp  generate_test_vectors.cpp  member_example.cpp  voting_examples.cpp
include/brightchain/: aes_gcm.hpp  audit_log.hpp  audit_types.hpp  base_block.hpp  batch_vote_processor.hpp  block_metadata.hpp  block_size.hpp  bulletin_board.hpp  bulletin_board_entry.hpp  cbl.hpp  checksum.hpp  constants.hpp  disk_block_store.hpp  ec_key_pair.hpp  ecies.hpp  encrypted_vote.hpp  event_log_entry.hpp  event_logger.hpp  event_type.hpp  extended_cbl.hpp  hierarchical_aggregator.hpp  hmac_drbg.hpp  member.hpp  paillier.hpp  poll.hpp  poll_factory.hpp  poll_tallier.hpp  poll_types.hpp  raw_data_block.hpp  shamir.hpp  super_cbl.hpp  tally_proof.hpp  test_voter_pool.hpp  vote_encoder.hpp  voting_method.hpp
server/: CMakeLists.txt
src/: CMakeLists.txt  aes_gcm.cpp  audit_log.cpp  block_metadata.cpp  block_size.cpp  bulletin_board.cpp  cbl.cpp  checksum.cpp  disk_block_store.cpp  ec_key_pair.cpp  ecies.cpp  event_logger.cpp  extended_cbl.cpp  hierarchical_aggregator.cpp  hmac_drbg.cpp  member.cpp  paillier.cpp  paillier.cpp.bak  poll.cpp  poll_factory.cpp  poll_tallier.cpp  raw_data_block.cpp  shamir.cpp  super_cbl.cpp  vote_encoder.cpp  voting_method.cpp
tests/: CMakeLists.txt  CROSS_COMPAT_README.md  aes_gcm_test.cpp  audit_log_test.cpp  block_metadata_test.cpp  block_size_test.cpp  block_types_test.cpp  bulletin_board_test.cpp  cbl_bidirectional_test.cpp  cbl_cross_compat_test.cpp  checksum_test.cpp  compare_drbg.cpp  debug_ecies.ts  disk_block_store_test.cpp  drbg_test.cpp  ec_key_pair_test.cpp  ecies_comprehensive_test.cpp  ecies_cross_compat_test.cpp  ecies_multiple_test.cpp  ecies_multirecipient_bidir_test.cpp  ecies_test.cpp  edge_case_cross_compat_test.cpp  event_logger_test.cpp  generate_comprehensive_vectors.ts  generate_ecies_vectors.ts  generate_edge_case_vectors.ts  generate_member_json_vectors.ts  generate_member_vectors.ts  generate_multirecipient_cpp_vectors.cpp  generate_multirecipient_ts_vectors.ts  generate_paillier_vectors.ts  generate_paillier_vectors_simple.ts  generate_sha3_vectors.ts  generate_shamir_vectors.ts  hierarchical_aggregator_test.cpp  member_json_cross_platform_test.cpp  member_json_test.cpp  member_test.cpp  member_test_vectors.json  mnemonic_voting_cross_platform_test.cpp  (+32 more)
